--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "firebase" : "^4.10.0",
-    "re-base": "3.2.2",
+    "firebase": "^5.9.1",
     "npm": "^6.4.0",
+    "re-base": "^4.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.5",
-    "react-router-dom": "^4.2.2"
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
